# ical-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: mac-studio-deploy.md
src/ical_mcp/: __init__.py  __main__.py  caldav.py  config.py  errors.py  ical.py  models.py  server.py
tests/: conftest.py  test_caldav_resolve.py  test_config.py  test_ical.py
