[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ical-mcp"
version = "0.1.0"
description = "MCP server for Apple Calendar and CalDAV providers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Matthew Aberham", email = "matthew.aberham@gmail.com" }]
keywords = ["mcp", "ical", "caldav", "apple-calendar", "icloud"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
ical-mcp = "ical_mcp:main"

[project.urls]
Homepage = "https://github.com/maberham/ical-mcp"
Repository = "https://github.com/maberham/ical-mcp"
Issues = "https://github.com/maberham/ical-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ical_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "ruff>=0.8",
]
